Solving warnings.